syntax = "proto3";

package auth;

import "google/protobuf/timestamp.proto";

service AuthService {
  rpc Login (LoginRequest) returns (LoginResponse) {}
  rpc VerifyAccessToken(AccessTokenRequest) returns (AccessTokenResponse) {}

}

enum CheckPasswordStatus {
  OK = 0;
  WRONG_PASSWORD = 1;
  NOT_FOUND = 2;
  INTERNAL = 3;
  UNRECOGNIZED = -1;
}

enum TokenStatus {
  OK = 0;
  WRONG_PASSWORD = 1;
  NOT_FOUND = 2;
  INTERNAL = 3;
  UNRECOGNIZED = -1;
}


enum  Role {
  USER = 0;
  ADMIN = 1;
}


message FindUserByIdRequest {
  string id = 1;
}
message FindUserByEmailRequest {
  string email = 1;
}

message FindUserByResponse {
  User user = 1;
}

message User {
  string id = 1;
  string firstName = 2;
  string lastName = 3;
  string email = 4;
  Role role = 5;
  google.protobuf.Timestamp createdAt = 6;
  google.protobuf.Timestamp updatedAt = 7;
}

message RefreshTokenResponse {
  string refreshToken = 1;
}

message AccessTokenRequest {
  string accessToken = 1;
  string clientIp = 2;
}

message AccessTokenResponse {
  TokenStatus status = 1;
  string userUuid = 2;
}

message LoginResponse {
  CheckPasswordStatus status = 1;
  string accessToken = 2;
  string refreshToken = 3;
}

message LoginRequest {
  string clientIp = 1;
  string email = 2;
  string password = 3;
}